--- a/packages/bot-web-ui/src/pages/main/main.scss
+++ b/packages/bot-web-ui/src/pages/main/main.scss
@@ -1,4 +1,4 @@
-@import '../../styles/constants.scss' ;
+@import '@deriv/styles/constants.scss' ;
 @import '../../styles/mixins.scss';
 
 .run-panel {
